--- a/css/forms_and_inputs.css
+++ b/css/forms_and_inputs.css
@@ -1,5 +1,5 @@
 /* default styles for search input. When style changes (width, position, etc.) are needed for a specific view, scope them inside their respective CSS files */
-.containSearch, .containSend {
+.searchContain, .sendContain {
 	border: 1px solid #ccc;
 	padding: 0;
 	position: relative;
@@ -7,7 +7,7 @@
 	padding-right: 32px;
 	width: 300px;
 }
-.containSearch input, .containSend input {
+.searchContain input, .sendContain input {
 	border: none;
 	width: 100%;
 	padding: 0 10px;
@@ -18,7 +18,7 @@
 }
 
 /*styling for search form buttons */
-.containSearch button {
+.searchContain button {
 	position: absolute;
 	right: 0px;
 	width: 30px;
@@ -28,7 +28,7 @@
 	background: #3258b3;
 	border: 0px;
 }
-.containSearch button:before {
+.searchContain button:before {
 	display: block;
 	position: absolute;
 	top: 16px;
@@ -47,7 +47,7 @@
 	transform-origin: left center;
 	content: "";
 }
-.containSearch button:after {
+.searchContain button:after {
 	content: "";
 	display: block;
 	position: absolute;
@@ -60,7 +60,7 @@
 }
 
 /*styling for email and other 'send' input form buttons */
-.containSend button {
+.sendContain button {
 	width: 30px;
 	position: absolute;
 	right: 0;
@@ -71,7 +71,7 @@
 	overflow: hidden;
 	background: none;
 }
-.containSend button:before {
+.sendContain button:before {
 	content: "";
 	height: 1px;
 	width: 18px;
@@ -80,7 +80,7 @@
 	top: 50%;
 	right: 8px;
 }
-.containSend button:after {
+.sendContain button:after {
 	content: "";
 	height: 10px;
 	width: 10px;
