--- a/css/changelocation.css
+++ b/css/changelocation.css
@@ -1,7 +1,3 @@
-#StoreLocations {
-	float: left;
-	width: 100%;
-}
 #SL_Wrapper {
 	border-top: 1px solid #ccc;
 	max-width: 1000px;
@@ -10,69 +6,25 @@
 	padding-bottom: 20px;
 	border-bottom: 1px solid #ccc;
 }
-.locationIcon {
-	float:left;
-	margin-top: 20px;
-	margin-left: 10px;
-	width: 19px;
-	height: 29px;
-}
-.storeInfo {
-	margin-top: 20px;
-	float:left;
-}
 #StoresNearby {
 	margin-top: 20px;
-}
-.otherStore {
-	padding-bottom: 20px;
-	border-bottom: 1px solid #ccc;
-}
-.locationTitle {
-	font-size: 18px;
-}
-.storeName {
-	font-size: 15px;
-	line-height: 20px;
-	font-weight: bold;
-}
-.storePhone {
-	margin-top: 10px;
-}
-.storeHours {
-	font-size: 13px;
-	font-weight: bold;
-	margin: 5px 0;
 }
 #SearchStores {
 	margin: 15px 0;
 }
+.locationTitle {
+	font-size: 18px;
+}
 .storesNearSearchTitle {
-	float: left;
 	margin-right:10px;
-	margin-top: 10px;
+	display: inline-block;
 }
 #SearchStores .containSearch {
 	width: 280px;
-	float:left;
+	display:inline-block;
 }
-.changeLocationBtn {
-	margin:10px 0;
-	width:200px;
-}
-
 @media only screen and (max-width: 1024px) {
     /* iPad/tablet Portrait AND landscape */
-	.locationTitle {
-		margin-left: 15px;
-	}
-	.storeInfo {
-		margin-left:15px;
-		margin-right:15px;
-	}
-	#SearchStores {
-		margin: 15px 0 0 15px;
-	}
 }
 @media only screen and (min-width: 960px) and (max-width: 1040px) {
     /* iPad/tablet Portrait */
@@ -80,12 +32,6 @@
 }
 @media only screen and (max-width: 767px) {
     /* Mobile */
-	.locationTitle {
-		margin-bottom:10px;
-	}
-	.storesNearSearchTitle {
-		margin-bottom:5px;
-	}
 }
 
 
