--- a/css/changelocation.css
+++ b/css/changelocation.css
@@ -2,10 +2,6 @@
 	border-top: 1px solid #ccc;
 	max-width: 1000px;
 }
-#MyStore {
-	padding-bottom: 20px;
-	border-bottom: 1px solid #ccc;
-}
 #StoresNearby {
 	margin-top: 20px;
 }
@@ -14,6 +10,7 @@
 }
 .locationTitle {
 	font-size: 18px;
+	font-weight: normal;
 }
 .storesNearSearchTitle {
 	margin-right:10px;
