--- a/css/itemDetail.css
+++ b/css/itemDetail.css
@@ -12,7 +12,7 @@
 }
 
 /*social share*/
-.containSocialShareIDP {
+.socialShareIDP_contain {
 	text-align: center;
 	margin-top: 25px;
 }
@@ -30,7 +30,7 @@
 	opacity:0.5;
 	filter: alpha(opacity=50); /* For IE8 and earlier */
 }
-.containSocialShareIDP .posShareIcon+.posShareIcon {
+.socialShareIDP_contain .posShareIcon+.posShareIcon {
 	margin-left: 15px;
 }
 .skinFacebookIcon {
