--- a/css/itemDetail.css
+++ b/css/itemDetail.css
@@ -145,7 +145,7 @@
 		max-width: 325px;
 		width: 100%;
 	}
-	.containSocialShareIDP {
+	.socialShareIDP_contain {
 		margin:15px 0;
 		text-align: left;
 	}
