clean up of files - removing images/contain classes

--- a/css/itemDetail.css
+++ b/css/itemDetail.css
@@ -145,7 +145,7 @@
 		max-width: 325px;
 		width: 100%;
 	}
-	.socialShareIDP_contain {
+	.containSocialShareIDP {
 		margin:15px 0;
 		text-align: left;
 	}
