--- a/css/buttons_and_icons.css
+++ b/css/buttons_and_icons.css
@@ -259,7 +259,7 @@
 }
 
 @media only screen and (max-width: 1024px) {
-	.sl_breadcrumbContain {
+	.breadCrumbContain {
 			margin: 20px 0 20px 15px;
 	}
 }
