--- a/css/landing.css
+++ b/css/landing.css
@@ -205,7 +205,7 @@
     position: relative;
     left: 0;
     margin:0 auto;
-    top:150px;
+    top:30%;
     width:200px;
     display: block;
 }
@@ -222,7 +222,7 @@
     float:left;
     position:absolute;
     top: 7px;
-    left: 275px;
+    left: 50%;
     display: block;
 }
 
