--- a/css/scss/_forms_and_inputs.scss
+++ b/css/scss/_forms_and_inputs.scss
@@ -25,7 +25,7 @@
 	height: 30px;
 	padding: 0;
 	top: 0;
-	background: #3258b3;
+	background: $primary-color;
 	border: 0px;
 }
 .searchContain button:before {
