--- a/css/scss/_hero_banner.scss
+++ b/css/scss/_hero_banner.scss
@@ -75,7 +75,7 @@
 	border-radius: 50px;
 }
 .slideIndicator a.active {
-	background:#3258b3;
+	background:$primary-color;
 }
 .specialEventNoClick {
 	cursor: default;
