--- a/css/scss/_bbpage.scss
+++ b/css/scss/_bbpage.scss
@@ -88,7 +88,7 @@
 	}
     .theToggle {
         height: 30px;
-        background-color: #3258b3;
+        background-color: $primary-color;
         margin: 5px 0 5px 0;
         color: #fff;
     }
