--- a/css/scss/_dropdown.scss
+++ b/css/scss/_dropdown.scss
@@ -27,7 +27,7 @@
 }
 .dropdownOptions {
 	background:#eee;
-	border:1px solid #ccc;
+	border:1px solid $border-color;
 	z-index:100;
 	overflow-y:scroll;
 	position:absolute;
