--- a/css/scss/_footer.scss
+++ b/css/scss/_footer.scss
@@ -1,6 +1,6 @@
 .shoplocal_footer {
 	margin: 20px 0;
-	border-top: 1px solid #ccc;
+	border-top: 1px solid $border-color;
 	padding: 15px 0 12px;
 }
 .clientFooter {
