--- a/css/scss/_store_tile.scss
+++ b/css/scss/_store_tile.scss
@@ -1,6 +1,6 @@
 .storeTile {
 	padding: 20px 0;
-	border-bottom: 1px solid #ccc;
+	border-bottom: 1px solid $border-color;
 }
 .storeName {
 	font-size: 15px;
