--- a/css/scss/styles.scss
+++ b/css/scss/styles.scss
@@ -1,3 +1,15 @@
+$primary-color: #3258b3;
+
+$border-color: #ccc;
+
+$primary-button-color: #3258b3;
+$primary-button-text-color: #fff;
+
+$secondary-button-color: #666;
+$secondary-button-text-color: #fff;
+
+$tertiary-button-text-color: #999;
+
 @import 'reset';
 @import 'site_wide';
 @import 'buttons_and_icons';
