--- a/css/scss/_entry.scss
+++ b/css/scss/_entry.scss
@@ -10,7 +10,7 @@
 	width: 200px;
 	height: 30px;
 	padding-left: 5px;
-	border: 1px solid #ccc;
+	border: 1px solid $border-color;
 	background: white;
 	color: #000000;
 	font-size: 14px;
