--- a/css/scss/_hero_banner.scss
+++ b/css/scss/_hero_banner.scss
@@ -71,7 +71,7 @@
 	height: 10px;
 	width: 10px;
 	margin: 5px;
-	background: #ccc;
+	background: $border-color;
 	border-radius: 50px;
 }
 .slideIndicator a.active {
