--- a/css/scss/_listing_tile.scss
+++ b/css/scss/_listing_tile.scss
@@ -1,7 +1,7 @@
 .listingTile {
 	margin: .75% 0 .75% 1.5%;
 	width: 23.875%;
-	border: 1px solid #ccc;
+	border: 1px solid $border-color;
 	box-sizing: border-box;
 	float: left;
 	position: relative;
@@ -74,7 +74,7 @@
 	.listingTile {
 		width: 100%;
 		border: none;
-		border-bottom: 1px solid #ccc;
+		border-bottom: 1px solid $border-color;
 		margin: 0;
 		float:none;
 		padding-bottom:50px;
