--- a/css/scss/_reset.scss
+++ b/css/scss/_reset.scss
@@ -62,7 +62,7 @@ hr {
     display:block;
     height:1px;
     border:0;   
-    border-top:1px solid #cccccc;
+    border-top:1px solid $border-color;
     margin:0;
     padding:0;
 }
