--- a/css/scss/_shopping_list.scss
+++ b/css/scss/_shopping_list.scss
@@ -27,8 +27,8 @@
 /*email dropdown*/
 .emailForm{
 	width: 100%;
-	border-top: 1px solid #C6C5C5;
-	border-bottom: 1px solid #C6C5C5;
+	border-top: 1px solid $border-color;
+	border-bottom: 1px solid $border-color;
 	margin: 10px auto;
 	text-align: center;
 }
@@ -47,7 +47,7 @@
 	width: 280px;
 	height: 32px;
 	padding-left: 5px;
-	border: 1px solid #C6C5C5;
+	border: 1px solid $border-color;
 	background: white;
 	color: #000;
 	font-size: 14px;
